--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: formaster
-description: Kit for create form
-version: 0.1.0
+description: Kit for create complex form
+version: 0.2.0
 homepage: https://github.com/iadept/flutter_formaster
 repository: https://github.com/iadept/flutter_formaster
 
